--- a/app/src/main/res/layout/content_browse.xml
+++ b/app/src/main/res/layout/content_browse.xml
@@ -5,19 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".EditActivity"
-    tools:showIn="@layout/activity_edit">
+    tools:context=".BrowseActivity"
+    tools:showIn="@layout/activity_browse">
 
-    <EditText
-        android:id="@+id/title_edit"
+    <TextView
+        android:id="@+id/entry_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"/>
-    <EditText
-        android:id="@+id/entry_edit"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/title_edit"/>
 
 </android.support.constraint.ConstraintLayout>
