--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="me.astashenkov.basicdiary.MainActivity">
     <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="90"
+        android:title="@string/action_delete"
+        android:icon="@android:drawable/ic_menu_delete"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_sort"
+        android:orderInCategory="80"
+        android:title="@string/action_sort"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
