--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,13 +12,40 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/textView_date"
+        android:id="@+id/textView_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        android:textSize="14sp"
         android:layout_below="@id/textView_title"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/textView_date_created"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_margin="4dp"
-        android:textSize="12sp"/>
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/textView_title"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="1dp"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/textView_date_modified"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/textView_date_created"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="1dp"
+        android:textSize="12sp" />
+
 
 </RelativeLayout>
